Fix look on mobile web

--- a/project/static/less/navigation.less
+++ b/project/static/less/navigation.less
@@ -108,6 +108,8 @@ nav a.logout:before { .icon-background('logout.png'); }
       width: 0 !important;
       margin-right: 15%;
 
+      &.logout { margin-right: 40px; }
+
       &:hover {
         padding-bottom: inherit;
         border-bottom: 0 !important;
